--- a/AppResOutput/1_abccare.tex
+++ b/AppResOutput/1_abccare.tex
@@ -2,7 +2,7 @@
 
 \setlength\tabcolsep{0.3em}
 
-\subsection{{Combining Functions, Aggregated}}
+\section{{Combining Functions, Aggregated}}
 
 
 	\begin{table}[H]
@@ -24,7 +24,7 @@
 	\end{table}  
 \clearpage
 
-\subsection{{Combining Functions, by Category}}
+\section{{Combining Functions, by Category}}
 
 
 	\begin{table}[H]
@@ -64,7 +64,7 @@
 	\end{table}   
 \clearpage
 
-\subsection{Treatment Effects for Pooled Sample}
+\section{Treatment Effects for Pooled Sample}
 
 
 	\begin{table}[H]
@@ -168,7 +168,7 @@
      \label{table:abccare_rslt_pooled_cat16}
 	\input{AppResOutput/abccare/rslt_pooled_cat16}
 	\end{table} 
-\subsection{Treatment Effects for Male Sample}
+\section{Treatment Effects for Male Sample}
 
 
 	\begin{table}[H]
@@ -272,7 +272,7 @@
      \label{table:abccare_rslt_male_cat16}
 	\input{AppResOutput/abccare/rslt_male_cat16}
 	\end{table} 
-\subsection{Treatment Effects for Female Sample}
+\section{Treatment Effects for Female Sample}
 
 
 	\begin{table}[H]
@@ -378,7 +378,7 @@
 	\end{table} 
 \clearpage
 
-\subsection{Treatment Effects for Pooled Sample, Step Down}
+\section{Treatment Effects for Pooled Sample, Step Down}
 
 
 	\begin{table}[H]
@@ -482,7 +482,7 @@
      \label{table:abccare_rslt_pooled_cat16_sd}
 	\input{AppResOutput/abccare/rslt_pooled_cat16_sd}
 	\end{table} 
-\subsection{Treatment Effects for Male Sample, Step Down}
+\section{Treatment Effects for Male Sample, Step Down}
 
 
 	\begin{table}[H]
@@ -586,7 +586,7 @@
      \label{table:abccare_rslt_male_cat16_sd}
 	\input{AppResOutput/abccare/rslt_male_cat16_sd}
 	\end{table} 
-\subsection{Treatment Effects for Female Sample, Step Down}
+\section{Treatment Effects for Female Sample, Step Down}
 
 
 	\begin{table}[H]
