--- a/abc_comprehensivecba_appendix.tex
+++ b/abc_comprehensivecba_appendix.tex
@@ -1,5 +1,6 @@
 %Input preamble
 \input{preamble}
+\input{output/mainstatistics}
 
 \externaldocument{abc_comprehensivecba}
 \pagenumbering{roman}
@@ -40,7 +41,7 @@ The University of Chicago}
 \setcounter{figure}{0}  \renewcommand{\thefigure}{A.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{A.\arabic{table}}
 
-\section[Background]{Background\footnote{This section of the paper is based on joint work with Sylvi Kuperman.}} \label{appendix:background}
+\section[Background]{Background\footnote{This section of the appendix is based on joint work with Sylvi Kuperman.}} \label{appendix:background}
 
 \subsection{Overview}
 
@@ -838,10 +839,14 @@ and
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{O.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{O.\arabic{table}}
-\input{Appendices/Sensitivity}
+\input{Appendices/MoreOutcomes}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{P.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{P.\arabic{table}}
+\input{Appendices/Sensitivity}
+
+\setcounter{figure}{0}  \renewcommand{\thefigure}{Q.\arabic{figure}}
+\setcounter{table}{0}   \renewcommand{\thetable}{Q.\arabic{table}}
 \input{Appendices/BackoftheEnvelopeCBA}
 
 \end{appendices}
