--- a/Appendices/ProgramCostsAlt.tex
+++ b/Appendices/ProgramCostsAlt.tex
@@ -1,4 +1,4 @@
-\section[Program Costs of ABC]{Program Costs\footnote{This section of the paper is based on joint work with Sylvi Kuperman.}} \label{app:programcosts}
+\section[Program Costs of ABC]{Program Costs\footnote{This section of the appendix is based on joint work with Sylvi Kuperman.}} \label{app:programcosts}
 
 \noindent In this appendix, we document the sources informing our programs' costs calculation in Section~\ref{section:programscosts}. We use a battery of primary sources obtained in the Archives of the University of North Carolina at Chapel Hill---Records of the Office of the Vice Chancellor \citet{UNC-Archives_Health-Affairs}. A copy of these battery of documents is available upon request. Figure~\ref{figure:who} exemplifies one of these sources, in which the monthly cost of treatment per child for the year 1977 is categorized by source of funding.
 
