Comparison Table Added

--- a/abc_jjh_pantano_critiques_slides.tex
+++ b/abc_jjh_pantano_critiques_slides.tex
@@ -78,7 +78,7 @@
 \begin{frame}
 \frametitle{Plan for Presentation}
 \begin{enumerate}
-	\item Control substitution: providing participants by sex
+	\item Control substitution
 	\item Treatment effects before control substitution onsets
 	\item Compare ``old'', ``Tuesday's'', and ``current'  estimates
 		\begin{itemize}
@@ -149,34 +149,30 @@
 
 %% ---------------------------------------------------------------------------
 
-\begin{frame}
-\frametitle{Yale Estimates}
-\begin{figure}
-\caption{CBA (Summary)}
-	\includegraphics[width=.8\columnwidth]{output/yaleresults.pdf}
-\end{figure}
-\end{frame}
-
-%% ---------------------------------------------------------------------------
-
-\begin{frame}
-\frametitle{Tuesday Estimates}
-\begin{figure}
-\caption{CBA (Summary)}
-	\includegraphics[width=.8\columnwidth]{output/pantanotuesdayestimates.pdf}
-\end{figure}
-\end{frame}
-
-%% ---------------------------------------------------------------------------
-
-\begin{frame}
-\frametitle{Current Estimates}
-\begin{center}
-\begin{table}
-	\caption{CBA Summary}
-	\scalebox{.60}{\input{output/cba_summary_controls_notrim}}
-\end{table}
-\end{center}
+\begin{frame}[shrink=30]
+\frametitle{Comparison of the Estimates}
+\begin{tabular}{llcccccc}
+											   && \multicolumn{2}{c}{Yale}&\multicolumn{2}{c}{Tuesday}&\multicolumn{2}{c}{Current}	\\
+		&										& IRR	& B/C	& IRR	& B/C	& IRR	& B/C			\\
+		& Baseline								& 0.05 	& 1.56	& 0.10	& 2.30	& 0.11	& 3.52			\\
+		&										& (0.12)& (1.42)& (0.12)& (1.56)& (0.12)& (2.67)		\\
+Females & Relative to Staying at Home			& 	.	& 	.	&-0.14&\textbf{4.97}		& -0.14	& \textbf{4.95}	\\
+		&										&	.	&	.	&(0.13)	&(2.02)	& (0.13)& (2.02)		\\
+		& Relative to Alternative Preschools	&   .	&   .	&0.08	&1.58		& 0.09	& 2.88			\\
+		&										&	.	&	.	&(0.14)	&(1.20)	& (0.11)& (1.85)		\\ \hline
+		& Baseline								& \textbf{0.25} & 6.91	& 0.15&7.88& \textbf{0.16}	& 9.21	\\
+		&										& (0.10)& 4.43	& (0.13)&(8.06)	& (0.11)& (8.33)		\\ 
+Males 	& Relative to Staying at Home			& 	.	& 	.	&0.02	&0.55	& 0.06	& 4.29 			\\
+		&										&	.	&	.	&(0.13)&(3.00)& (0.11)& (4.75) 		\\ 
+		& Relative to Alternative Preschools	& .	& .	&\textbf{0.20}&\textbf{12.24}& \textbf{0.21}& \textbf{13.64}\\
+		&										&	.	&	.	&(0.14)		&(5.39)		& (0.13)& (5.72)			\\ \hline
+		& Baseline						& \textbf{0.16} & \textbf{4.30}& \textbf{0.13}&4.35 & \textbf{0.13}	& \textbf{5.80} \\
+		&										& (0.06)&(2.15)	&(0.11)&(2.57)& (0.06)& (2.86) 			\\ 
+Pooled  & Relative to Staying at Home			& 	.	& 	.	&\textbf{0.09}&3.78		& \textbf{0.10}	& 5.18  		\\
+		&										&	.	&	.	&(0.05)&(2.15)& (0.05)& (3.19) 			\\ 
+		& Relative to Alternative Preschools	& 	.	& 	.	&\textbf{0.12}&4.34& \textbf{0.13}	& \textbf{5.56} 		\\
+		&										&	.	&	.	&(0.09)&(2.67)& (0.06)	& (2.88) 			\\ 
+\end{tabular}
 \end{frame}
 
 %% ---------------------------------------------------------------------------
