--- a/scripts/abc/baselinetables/rslt/README
+++ b/scripts/abc/baselinetables/rslt/README
@@ -2,3 +2,6 @@ Author	Joshua Shea
 Date	July 7, 2016
 
 This folder contains the bootstrapped mean differences for baseline characteristics.
+They are generated using:
+
+../bootstrap.py
