--- a/scripts/care/baselinetables/rslt/README
+++ b/scripts/care/baselinetables/rslt/README
@@ -1,5 +1,7 @@
 Author	Joshua Shea
-Date 	July 7
+Date	July 7, 2016
 
-This folder contains the bootstrapped mean differencs at baseline between various subsamples of the CARE data.
+This folder contains the bootstrapped mean differences for baseline characteristics.
+They are generated using:
 
+../bootstrap.py
