Duncan's edits to Background section of health appendix

--- a/Appendices/Health/bgdesc.tex
+++ b/Appendices/Health/bgdesc.tex
@@ -6,26 +6,27 @@ To project the life-cycle path of health outcomes and medical expenditures, we u
 
 \noindent The defining characteristic of this approach is the modeling of real rather than synthetic cohorts, all of whom
 are followed at the individual level. This allows for more heterogeneity in behavior than would be allowed
-by a cell-based approach. The core of the model can be described as follows: the cohort starter module contains the health outcomes of the ABC or CARE subjects at age 30 and other variables that are used as input for the simulation of individual trajectories. This module uses ABC or CARE data. The transition module calculates the individual probabilities of transiting across various health states and other outcomes of relevance to health. The transition probabilities are estimated from the longitudinal data in the PSID, taking as inputs risk factors such as smoking, weight, alcohol consumption, gender, race and ethnicity, age and education, along with lagged health, personal, and economic states.\footnote{Section \ref{section:data} provides details about the data sources used in the estimation.} This scheme allows for a great deal of heterogeneity and fairly general feedback effects. Finally, the policy outcomes module aggregates projections of individual-level outcomes into policy outcomes such as
+by a cell-based approach. The core of the model can be described as follows: first, the cohort starter module contains the health outcomes of the ABC or CARE subjects at age 30 and other variables that are used as input for the simulation of individual trajectories. This module uses ABC or CARE data. Missing variables in the ABC and CARE data are imputed probabilistically from models estimated using PSID data.  Next, the transition module calculates the individual probabilities of transiting across various health states and other outcomes relevant to health. The transition probabilities are estimated from the longitudinal data in the PSID, taking as inputs risk factors such as smoking, weight, alcohol consumption, gender, race and ethnicity, age and education, along with lagged health, personal, and economic states.\footnote{Section \ref{section:data} provides details about the data sources used in the estimation.} This scheme allows for a great deal of heterogeneity and fairly general feedback effects. Finally, the policy outcomes module aggregates projections of individual-level outcomes into policy outcomes such as
 taxes, medical expenditures, and disability benefits. \\
 
 
 \noindent The cohort starter module includes the following variables for each ABC and CARE subject: \\
 \begin{itemize}
-\item Individual characteristics: year of birth, gender, treatment status, education of the mother, race, health as a child, and education at age 30.
+\item Individual characteristics: year of birth, gender, treatment status, education of the mother, self-reported ``rich'' or ``poor'' as a child, race, and education at age 30.
 \item Economic outcomes at age 30: working status, earnings, and health insurance status.
-\item Health outcomes and health behaviors at age 30: body mass index (BMI), smoking, binge drinking, physical activity (frequency and intensity), psychological distress, asthma, high blood pressure, heart disease, cancer, lung disease, diabetes, and stroke.
+\item Health outcomes and health behaviors at age 30: body mass index (BMI), smoking, binge drinking, physical activity, psychological distress, asthma, high blood pressure, heart disease, cancer, lung disease, diabetes, and stroke.
 \end{itemize}
 \noindent Health conditions and health behaviors are derived from survey questions about doctor-diagnosed conditions and self-reported health behaviors. For details about how we deal with missing variables and assumptions, see Section \ref{section:FAM_ABC_impute}. %note what we assume about race
  \\
 
-\noindent The core of the microsimulation is a set of models of disease conditions designed to predict future health and functional status of each individual from his or her current health state at age 30. To predict health and economic outcomes over time, the model calculates the transition probabilities between various health states and other outcomes. Health states include diabetes, heart disease, stroke, cancer, hypertension, lung disease, and number of difficulties in physical and instrumental activities of daily living (ADLs and IADLs); health risks include BMI (defined as weight in kilograms divided by height in meters squared, which is used to measure incidence of obesity), binge drinking (defined as binge drinking at least three times per month\footnote{Where binge drinking behavior is defined as drinking more than five alcoholic drinks in an instance for males and more than four for females.}), smoking behavior and (lack of) physical activity; other outcomes include health insurance status, changes in family structure (partnership or marriage, childbearing), labor market participation, working status, earnings, receipt of Social Security, participation in public programs, and medical expenditures. We also estimate quality-adjusted life years (QALYs), a measure of the quality of life that adjusts for the burden of disease.\footnote{A QALY equals one year of life in the absence of disease. This measure has been widely used in the literature to evaluate the value of medical interventions and improvements.} \\
+\noindent The core of the microsimulation is a set of models of disease conditions designed to predict future health and functional status of each individual from his or her current health state at age 30. To predict health and economic outcomes over time, the model calculates the transition probabilities between various health states and other outcomes. Health states include diabetes, heart disease, stroke, cancer, hypertension, lung disease, and number of difficulties in physical and instrumental activities of daily living (ADLs and IADLs); health risks include BMI (defined as weight in kilograms divided by height in meters squared, which is used to measure incidence of obesity), binge drinking (defined as binge drinking at least three times per month\footnote{Where binge drinking behavior is defined as drinking more than five alcoholic drinks in an instance for males and more than four for females.}), smoking behavior and (lack of) physical activity; other outcomes include health insurance status, changes in family structure (partnership or marriage, childbearing), labor market participation, working status, receipt of Social Security, participation in public programs, and medical expenditures. We also estimate quality-adjusted life years (QALYs), a measure of the quality of life that adjusts for the burden of disease.\footnote{A QALY equals one year of life in the absence of disease. This measure has been widely used in the literature to evaluate the value of medical interventions and improvements.} \\
 
-\noindent The likelihood of developing a health condition depends on key risk factors including age, gender, education, race and ethnicity, health as a child, number of births if female, obesity (BMI greater than 30 kg/m$^2$), overweight (BMI of 25--29 kg/m$^2$), smoking status, physical activity, asthma, and lagged health outcomes. By incorporating lagged variables into the model, we account for the likelihood that past behaviors may influence risks far into the future. This capacity is important because prior research indicates that past health behaviors, such as recency of prior smoking and 10-year history of obesity, can influence current health outcomes.\footnote{\citet{Tong_etal_1996-Lung-Carcinoma,Moore_etal_2008_Past-Body-Mass}.} Furthermore, because transition probabilities vary depending on demographic characteristics, such as race and ethnicity, education, gender, and age, the model tracks outcomes by socioeconomic subgroups, and it allows for responses to policies to be subgroup-specific. \\
+\noindent The likelihood of developing a health condition depends on key risk factors including age, gender, education, race and ethnicity, obesity (BMI greater than 30 kg/m$^2$), smoking status, physical activity, asthma, and lagged health outcomes. By incorporating lagged variables into the model, we account for the likelihood that past behaviors may influence risks far into the future. This capacity is important because prior research indicates that past health behaviors, such as recency of prior smoking and 10-year history of obesity, can influence current health outcomes.\footnote{\citet{Tong_etal_1996-Lung-Carcinoma,Moore_etal_2008_Past-Body-Mass}.} Furthermore, because transition probabilities vary depending on demographic characteristics, such as race and ethnicity, education, gender, and age, the model tracks outcomes by socioeconomic subgroups, and it allows for responses to policies to be subgroup-specific. \\
 
 \noindent Health conditions are treated as absorbing states, i.e., once a person has a disease she is assumed to have it forever. A person can transition out of an obese state and back into it. A person can quit smoking and resume smoking. We model transitions of all health conditions and risk factors with a first-order Markov process. A number of restrictions are placed on the way a disease or condition is associated with other conditions (see Section \ref{section:transition_models} for details). Like the previous literature that uses FEM and FAM, we assume that risk factors and health conditions only from the prior period determine future health, disability, and mortality (a Markov process). This Markov assumption may be a potential limitation to the accuracy of disease dynamics, but given the available follow-up data it would be difficult to implement a higher order process. Moreover, to evaluate the performance of the estimated model, we validate it using various techniques, including comparing model results from early years with actual data available for later years.\footnote{\citet{Goldman_etal_2015_Future-America-Model}.} \\
 %Include table for models, reference here or in methods?
 
-\noindent Family formation models estimate transition probabilities between the following relationship statuses:  single, cohabiting, married, separated/divorced, and widowed. We use multivariate regression models to estimate the number of children born separately for women and men. Economic models are developed to estimate labor force participation and employment status (possible states allowed by the model are: unemployed, out of the labor force, working part-time, or working full-time), earnings, and the take-up of government social insurance programs such as disability insurance. Because there is no information about assets in the ABC or CARE data, we do not simulate wealth transitions.\footnote{Additional details of the transition models are provided in \citet{Goldman_etal_2015_Future-America-Model}.} \\
+\noindent Family formation models estimate transition probabilities between the following relationship statuses:  single, cohabiting, married, separated/divorced, and widowed. We use multivariate regression models to estimate the number of children born separately for women and men. Economic models are developed to estimate labor force participation and employment status (possible states allowed by the model are: unemployed, out of the labor force, working part-time, or working full-time), and the take-up of government social insurance programs such as disability insurance. 
+Transitions of labor earnings are projected outside of the simulation (Section \ref{subject_income} describes the methodology).  Because there is no information about assets in the age 30 ABC or CARE data, we do not simulate wealth transitions.\footnote{Additional details of the transition models are provided in \citet{Goldman_etal_2015_Future-America-Model}.} \\
 
 \noindent We simulate outcomes for cohorts that have the initial characteristics of the ABC or CARE treatment and control groups at age 30. In each year, we use the health, family, and economic transition models to predict obesity, smoking behavior, health status, economic status, family characteristics, and disability. We then use the models of health care spending to calculate total medical costs, Medicare, Medicaid, and out-of-pocket payments. We repeat the simulation each year until everyone in the cohort would have died. \\
