--- a/output/sensitivity.tex
+++ b/output/sensitivity.tex
@@ -4,29 +4,29 @@
 \cmidrule(lr){2-4}      \cmidrule(lr){5-7}      \cmidrule(lr){8-10}																			
 Removed Component       &       NPV     &       IRR     &       B/C     &       NPV     &       IRR     &       B/C     &       NPV     &       IRR     &       B/C     \\																			
 \midrule																			
-None	&		&	0.11	&	3.52	&		&	\textbf{0.16}	&	9.21	&		&	\textbf{0.13}	&	\textbf{5.80}	\\
-	&		&	(0.09)	&	(2.31)	&		&	(0.11)	&	(6.36)	&		&	(0.05)	&	(2.69)	\\ \\
-Parental Income	&	\textbf{112,402}	&	0.05	&	2.33	&	\textbf{91,722}	&	\textbf{0.12}	&	8.24	&	\textbf{115,026}	&	\textbf{0.09}	&	4.58	\\
-	&	(54,785)	&	(0.07)	&	(2.20)	&	(50,235)	&	(0.08)	&	(6.34)	&	(33,070)	&	(0.03)	&	(2.59)	\\
-Subject QALY	&	96,383	&	0.10	&	2.50	&	102,236	&	-.11	&	\textbf{8.13}	&	120,009	&	-.11	&	4.52	\\
-	&	(212,381)	&	(0.09)	&	(1.22)	&	(588,171)	&	(0.11)	&	(5.26)	&	(125,845)	&	(0.12)	&	(2.44)	\\
-Subject Labor Income	&	39,587	&	0.11	&	3.10	&	191,868	&	\textbf{0.16}	&	7.18	&	112,510	&	\textbf{0.13}	&	\textbf{4.60}	\\
-	&	(94,213)	&	(0.09)	&	(2.13)	&	(370,654)	&	(0.11)	&	(5.37)	&	(133,018)	&	(0.05)	&	(2.40)	\\
-Subject Transfer Income	&	8,292	&	0.11	&	3.43	&	-550	&	\textbf{0.16}	&	9.22	&	-5,920	&	\textbf{0.13}	&	\textbf{5.86}	\\
-	&	(16,685)	&	(0.09)	&	(2.34)	&	(24,321)	&	(0.11)	&	(6.41)	&	(8,114)	&	(0.05)	&	(2.70)	\\
-Medical Expenditures	&	10,913	&	0.11	&	3.40	&	12,043	&	\textbf{0.16}	&	9.08	&	13,478	&	\textbf{0.13}	&	\textbf{5.65}	\\
-	&	(28,780)	&	(0.08)	&	(2.22)	&	(161,370)	&	(0.08)	&	(6.29)	&	(26,522)	&	(0.05)	&	(2.67)	\\
-Control Contamination	&	\textbf{16,725}	&	0.09	&	3.34	&	\textbf{13,543}	&	\textbf{0.15}	&	9.07	&	\textbf{13,879}	&	\textbf{0.12}	&	\textbf{5.65}	\\
-	&	(2,297)	&	(0.08)	&	(2.31)	&	(2,105)	&	(0.10)	&	(6.35)	&	(1,604)	&	(0.04)	&	(2.68)	\\
-Education Costs	&	-41,792	&	\textbf{0.13}	&	3.96	&	12,234	&	\textbf{0.15}	&	9.08	&	-16,551	&	\textbf{0.14}	&	\textbf{5.97}	\\
-	&	(13,198)	&	(0.09)	&	(2.30)	&	(14,072)	&	(0.10)	&	(6.39)	&	(9,328)	&	(0.05)	&	(2.68)	\\
-Crime Costs	&	\textbf{89,735}	&	0.09	&	2.57	&	446,517	&	\textbf{0.12}	&	4.48	&	194,724	&	\textbf{0.09}	&	\textbf{3.73}	\\
-	&	(41,511)	&	(0.10)	&	(2.28)	&	(421,521)	&	(0.08)	&	(5.24)	&	(197,764)	&	(0.04)	&	(1.82)	\\ \\
-Deadweight Loss	&		&	\textbf{0.18}	&	4.90	&		&	\textbf{0.21}	&	13.45	&		&	\textbf{0.17}	&	\textbf{8.57}	\\
-	&		&	(0.14)	&	(3.38)	&		&	(0.13)	&	(9.60)	&		&	(0.08)	&	(4.02)	\\
-0\% Discount Rate	&		&		&	9.98	&		&		&	24.18	&		&		&	\textbf{15.62}	\\
-	&		&		&	(9.37)	&		&		&	(21.73)	&		&		&	(8.20)	\\
-5\% Discount Rate	&		&		&	2.16	&		&		&	\textbf{5.44}	&		&		&	\textbf{3.52}	\\
-	&		&		&	(1.10)	&		&		&	(3.29)	&		&		&	(1.48)	\\
+None	&		&	0.15	&	\textbf{3.38}	&		&	-.10	&	6.75	&		&	0.10	&	\textbf{4.75}	\\
+	&		&	(0.11)	&	(1.59)	&		&	(0.11)	&	(6.22)	&		&	(0.10)	&	(2.04)	\\ \\
+Parental Income	&	\textbf{158,017}	&	0.05	&	1.72	&	45,511	&	-.10	&	6.27	&	\textbf{74,718}	&	0.08	&	\textbf{3.96}	\\
+	&	(43,586)	&	(0.05)	&	(1.49)	&	(45,289)	&	(0.10)	&	(6.10)	&	(25,250)	&	(0.07)	&	(2.05)	\\
+Subject QALY	&	0	&	0.15	&	\textbf{3.38}	&	0	&	-.10	&	6.75	&	0	&	0.10	&	\textbf{4.75}	\\
+	&	(0.00)	&	(0.11)	&	(1.59)	&	(0.00)	&	(0.11)	&	(6.22)	&	(0.00)	&	(0.10)	&	(2.04)	\\
+Subject Labor Income	&	44,201	&	0.16	&	\textbf{2.92}	&	124,655	&	-.06	&	5.44	&	93,992	&	-.08	&	\textbf{3.76}	\\
+	&	(151,724)	&	(0.10)	&	(0.78)	&	(639,086)	&	(0.10)	&	(4.72)	&	(119,314)	&	(0.09)	&	(1.72)	\\
+Subject Transfer Income	&	-1,276	&	0.16	&	\textbf{3.40}	&	-2,318	&	-.10	&	6.78	&	6,255	&	0.10	&	\textbf{4.68}	\\
+	&	(34,263)	&	(0.11)	&	(1.60)	&	(33,759)	&	(0.11)	&	(6.23)	&	(9,411)	&	(0.10)	&	(2.04)	\\
+Medical Expenditures	&	14,344	&	0.15	&	\textbf{3.23}	&	14,905	&	\textbf{0.13}	&	6.59	&	14,645	&	\textbf{0.10}	&	\textbf{4.60}	\\
+	&	(82,883)	&	(0.15)	&	(1.55)	&	(146,935)	&	(0.10)	&	(6.17)	&	(39,129)	&	(0.07)	&	(2.03)	\\
+Control Contamination	&	\textbf{19,884}	&	\textbf{0.12}	&	\textbf{3.17}	&	\textbf{15,608}	&	-.10	&	6.59	&	\textbf{15,073}	&	0.09	&	\textbf{4.59}	\\
+	&	(3,147)	&	(0.08)	&	(1.59)	&	(2,324)	&	(0.11)	&	(6.21)	&	(2,229)	&	(0.09)	&	(2.03)	\\
+Education Costs	&	-47,183	&	0.16	&	\textbf{3.88}	&	15,340	&	-.10	&	6.59	&	-11,353	&	0.11	&	\textbf{4.87}	\\
+	&	(14,395)	&	(0.11)	&	(1.58)	&	(13,222)	&	(0.11)	&	(6.23)	&	(11,316)	&	(0.10)	&	(2.06)	\\
+Crime Costs	&	\textbf{133,116}	&	0.14	&	1.98	&	427,343	&	0.07	&	2.25	&	\textbf{257,780}	&	0.07	&	2.04	\\
+	&	(44,756)	&	(0.10)	&	(1.47)	&	(447,081)	&	(0.09)	&	(3.64)	&	(172,485)	&	(0.06)	&	(1.15)	\\ \\
+Deadweight Loss	&		&	0.23	&	\textbf{4.70}	&		&	-.10	&	9.70	&		&	0.13	&	\textbf{6.77}	\\
+	&		&	(0.18)	&	(2.36)	&		&	(0.12)	&	(9.36)	&		&	(0.13)	&	(3.04)	\\
+0\% Discount Rate	&		&		&	\textbf{7.10}	&		&		&	14.72	&		&		&	\textbf{11.89}	\\
+	&		&		&	(4.66)	&		&		&	(15.56)	&		&		&	(5.21)	\\
+5\% Discount Rate	&		&		&	\textbf{2.39}	&		&		&	4.29	&		&		&	\textbf{2.81}	\\
+	&		&		&	(0.90)	&		&		&	(3.61)	&		&		&	(1.17)	\\
 \bottomrule																			
 \end{tabular}																			
